<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/board"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/board"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <ImageView
        android:id="@+id/cellBtn1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/cellBtn1"
        app:layout_constraintBottom_toTopOf="@+id/cellBtn4"
        app:layout_constraintEnd_toStartOf="@+id/cellBtn2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/board"
        app:layout_constraintTop_toTopOf="@id/board"
        app:srcCompat="@drawable/empty" />

    <ImageView
        android:id="@+id/cellBtn2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/cellBtn2"
        app:layout_constraintBottom_toTopOf="@+id/cellBtn5"
        app:layout_constraintEnd_toStartOf="@+id/cellBtn3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cellBtn1"
        app:layout_constraintTop_toTopOf="@id/board"
        app:srcCompat="@drawable/empty" />

    <ImageView
        android:id="@+id/cellBtn3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/cellBtn3"
        app:layout_constraintBottom_toTopOf="@+id/cellBtn6"
        app:layout_constraintEnd_toEndOf="@id/board"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cellBtn2"
        app:layout_constraintTop_toTopOf="@id/board"
        app:srcCompat="@drawable/empty" />

    <ImageView
        android:id="@+id/cellBtn4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/cellBtn4"
        app:layout_constraintBottom_toTopOf="@+id/cellBtn7"
        app:layout_constraintEnd_toStartOf="@id/cellBtn5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/board"
        app:layout_constraintTop_toBottomOf="@+id/cellBtn1"
        app:srcCompat="@drawable/empty" />

    <ImageView
        android:id="@+id/cellBtn5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/cellBtn5"
        app:layout_constraintBottom_toTopOf="@id/cellBtn8"
        app:layout_constraintEnd_toStartOf="@id/cellBtn6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/cellBtn4"
        app:layout_constraintTop_toBottomOf="@id/cellBtn2"
        app:srcCompat="@drawable/empty" />

    <ImageView
        android:id="@+id/cellBtn6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/cellBtn6"
        app:layout_constraintBottom_toTopOf="@id/cellBtn9"
        app:layout_constraintEnd_toEndOf="@+id/board"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/cellBtn5"
        app:layout_constraintTop_toBottomOf="@id/cellBtn3"
        app:srcCompat="@drawable/empty" />

    <ImageView
        android:id="@+id/cellBtn7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/cellBtn7"
        app:layout_constraintBottom_toBottomOf="@+id/board"
        app:layout_constraintEnd_toStartOf="@id/cellBtn8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/board"
        app:layout_constraintTop_toBottomOf="@id/cellBtn4"
        app:srcCompat="@drawable/empty" />

    <ImageView
        android:id="@+id/cellBtn8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/cellBtn8"
        app:layout_constraintBottom_toBottomOf="@+id/board"
        app:layout_constraintEnd_toStartOf="@id/cellBtn9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cellBtn7"
        app:layout_constraintTop_toBottomOf="@+id/cellBtn5"
        app:srcCompat="@drawable/empty" />

    <ImageView
        android:id="@+id/cellBtn9"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/cellBtn9"
        app:layout_constraintBottom_toBottomOf="@+id/board"
        app:layout_constraintEnd_toEndOf="@+id/board"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cellBtn8"
        app:layout_constraintTop_toBottomOf="@+id/cellBtn6"
        app:srcCompat="@drawable/empty" />

    <ImageView
        android:id="@+id/winningLine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/winingline"
        app:layout_constraintBottom_toBottomOf="@id/board"
        app:layout_constraintEnd_toEndOf="@id/board"
        app:layout_constraintStart_toStartOf="@id/board"
        app:layout_constraintTop_toTopOf="@id/board" />

    <ImageView
        android:id="@+id/whoPlays"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/whoPlays"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/board"
        app:srcCompat="@drawable/xplay" />

    <Button
        android:id="@+id/reset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:textSize="50sp"
        android:text="@string/reset"
        android:backgroundTint="@color/black"
        app:layout_constraintTop_toBottomOf="@id/whoPlays"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>